# writhdeck-android

./: .gitignore  CLAUDE.md  README.md  SKILLS.md  compile_apk.sh  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/tcl/: boot-android.tcl
app/src/main/cpp/: CMakeLists.txt  writhdeck_jni.c
app/src/main/java/com/writhdeck/app/: AppConfig.kt  ColorSchemes.kt  Fonts.kt  MainActivity.kt  StateStore.kt  WrithdeckEngine.kt  WrithdeckViewModel.kt
app/src/main/java/com/writhdeck/app/ui/: AppNavigation.kt  BrowserScreen.kt  ColorPickerDialog.kt  EditorScreen.kt  SchemeConfigScreen.kt  SettingsScreen.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
tools/: build-tcl-android.sh
